@@ -1,5 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_types" meta_type="Plone Types Tool">
-  <object name="Lingua Folder" meta_type="Factory-based Type Information"/>
-  <object name="Lingua Item" meta_type="Factory-based Type Information"/>
-</object>
