@@ -1,25 +1,0 @@
-<?xml version="1.0"?>
-<object name="LinguaItem" meta_type="Factory-based Type Information"
-   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
- <property name="title">Simple Type</property>
- <property name="description">A simple multilingual archetype</property>
- <property name="content_icon">document_icon.gif</property>
- <property name="content_meta_type">LinguaItem</property>
- <property name="product">LinguaPlone</property>
- <property name="factory">addLinguaItem</property>
- <property name="immediate_view">base_edit</property>
- <property name="global_allow">True</property>
- <property name="filter_content_types">False</property>
- <property name="allowed_content_types"/>
- <property name="allow_discussion">False</property>
- <alias from="(Default)" to="base_view"/>
- <alias from="edit" to="base_edit"/>
- <action title="View" action_id="view" category="object" condition_expr=""
-    url_expr="string:${object_url}/base_view" visible="True">
-  <permission value="View"/>
- </action>
- <action title="Edit" action_id="edit" category="object" condition_expr=""
-    url_expr="string:${object_url}/base_edit" visible="True">
-  <permission value="Modify portal content"/>
- </action>
-</object>
